# ContainerDataItem

./: Dockerfile  Makefile  README.md  client.py  grpcc.py  grpcs.py  requirements copy.txt  requirements.txt  rtt_service.proto  rtt_service_pb2.py  rtt_service_pb2_grpc.py  serve.py  server.py
deployment/docker/: docker-compose.yaml
deployment/kube/: Makefile
rdma-ctypes/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cat  client  client.py  cmake_install.cmake  cmd.py  msg_queue.py  pod.yaml  server  server.py  utils.py
rdma-ctypes/rdma_py/: client.py  msq.py  server.py  utils.py
rdma-ctypes/src/: client.c  server.c  structs.h  utils.c  utils.h
rdma-ctypes/tests/: client.sh
single-host/: cdi.csv  clean_deta.py  cli2.csv  cpucfd.py  grpc.csv  grpc_out.csv  memcdf.py  multihost_grpc.csv  multihost_grpc_out.csv  multihost_rest.csv  multihost_rest_out.csv  multihost_tcp.csv  multihost_tcp_out.csv  network.py  rest.csv  rest_out.csv  tcp.csv  tcp_out.csv
srvs/app_process/: Dockerfile  app.py  cdi_config_model.py  cdi_handlers.py  cdi_ops.py  config.json
srvs/client/: app.py  cdi_handlers.py  extractor.py
srvs/combiner/: Dockerfile  app.py  cache_ops.py  cdi_handlers.py  combiner.py  extractor.py  requirements.txt
srvs/common/: Dockerfile  requirements.txt
srvs/controller/: Dockerfile  app.py
srvs/detector/: Dockerfile  app.py  cdi_handlers.py  detector.py
srvs/extractor/: Dockerfile  app.py  cdi_config_model.py  cdi_handlers.py  extractor.py  requirements.txt
srvs/minion/: Dockerfile  app.py
srvs/object_detector/: Dockerfile  app.py  object_detector.py  requirements.txt
srvs/rdma/: Dockerfile  client.py  serve.py
srvs/server/: app.py  cdi_handlers.py
srvs/testpod/: Dockerfile  client.py  requirements.txt
srvs/workflow_controller/: Dockerfile  app.py  db.py
srvs/workflow_scheduler/: Dockerfile  app.py
srvs/workflow_worker/: Dockerfile  app.py  requirements.txt
(+118 files in other folders)
